--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,16 @@ body {
     --chart-5: 340 75% 55%;
   }
 }
+/* Add these CSS rules */
+.touch-none {
+  touch-action: none;
+}
 
+[data-dragging] {
+  cursor: grabbing;
+  user-select: none;
+  -webkit-user-select: none;
+}
 
 
 
